2002-09-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: commandline parameter checking, usage
	reporting; fix for junction file
	* dcwatdes.model.epanet.importinpfile: loading via inp2shp
	now
	* dcwatdes.file.waitfor: checking for standard xp location
	of kernel32.dll; allowing the user to select the kernel32.dll
	location
	* dc_water_design_extension.nsi: now installing start menu entries
	for all users; updated for 2.07 release
	* doc/dcwatdes_manual.lyx: updated for 2.07 release
	
2002-09-27  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* inp2shp/Makefile: updated for gcc 3.2 (MinGW 2.0), optimizing
	* inp2shp/inp2shp.h:
	* inp2shp/inp2shp.c: worked on compiler error messages, commented out
	printfs, checkvalves and vertices are working
	
2002-09-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: preliminary support for pumps and valves

2002-09-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: pipe vertices are imported now
	
2002-09-20  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* inp2shp/inp2shp.c:
	* inp2shp/README: 
	* inp2shp/Makefile: working on new INP import based
	on the EPANET toolkit and shapelib
	* dcwatdes/license-dcwaterdesignextension.txt: updated copyright
	
2002-09-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.splitpipe: fixed splitting in some cases with a
	approximate split
	* dcwatdesextension.make: marked as version 2.07rc3

2002-08-27  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* dcwatdes.model.epanet.junctions.createmissing: fixed snapping
	lookup in preferences
	* dcwatdesextension.make: marking as version 2.07rc2
	
2002-07-17  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.file.waitfor: initializing variable now (this fix was lost
	somewhere)
	* dcwatdes.model.epanet.run: re-added quotation marks to epanet call 
	* dcwatdesextension.install: menus are translated on project startup
	now