@@ -1,3 +1,7 @@
+2002-09-29  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+	
+	* inp2shp/inp2shp.c: writing attributes for pipes, nodes
+	
 2002-09-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* inp2shp/inp2shp.c: commandline parameter checking, usage
